--- a/FDA and Owlbot Api/index.html
+++ b/FDA and Owlbot Api/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
+<section class="inputButton">
+<h2>What's Your Sympton</h2>
+<section class="textandButton">
 <input type="text">
+<button type="button">Submit</button>
+</section>
+</section>
 <p></p>
 <span></span>
+<!-- <div ></div> -->
 <!-- <button type="button">Submit</button> -->
 <table id='tableID'>
 
 </table>
-<button type="button">Submit</button>
+<!-- <button type="button">Submit</button> -->
 <script type="text/javascript" src="JS/script.js"></script>
   </body>
 
